deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks-app
  labels:
    app: tasks-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasks-app
  template:
    metadata:
      labels:
        app: tasks-app
    spec:
      containers:
        - name: tasks-app
          # Image poussée par ton pipeline Jenkins dans Nexus.
          # Tu peux mettre à jour le tag (version) au fil des releases.
          image: localhost:8083/simdev/task-rest-api:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5300
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
